# mosaic_workflows

./: .gitignore  .gitmodules  README.md  pyproject.toml
_downloads/results-binder-minmax/binder_minmax_1757596135_seed101_len80/: best_sequence.txt  best_x.npy  last_metrics.json  sequences.jsonl  trajectory.jsonl
_downloads/results-binder-minmax/binder_minmax_1757598693_seed77_len60/: best_sequence.txt  best_x.npy  last_metrics.json  sequences.jsonl  trajectory.jsonl
_downloads/results-binder-minmax/binder_minmax_1757600536_seed79_len60/: best_sequence.txt  best_x.npy  last_metrics.json  sequences.jsonl  trajectory.jsonl
docs/: outer_loop.md
scripts/: modal_app.py  modal_app_bindcraft.py  modal_app_minmax.py  run_binder_games_boltz1_minmax.py  run_pdl1_boltzdesign_control.py  test_mhetase_losses.py
src/binder_games/: README.md  __init__.py  analyzers.py  builders.py  losses.py  optimizers.py  transforms.py  validators.py
src/joltz/: README.md
src/mosaic/losses/: boltz.py  boltz2.py  protenix.py  structure_prediction.py  tmol.py  transformations.py  wrappers.py
src/mosaic/motifs/: mhetase.py
src/mosaic_workflows/: README.md  __init__.py  analyzers.py  bindcraft_compat.py  callbacks.py  design.py  init.py  mhetase_scaffold.py  optimizers.py  outer.py  predict.py  pyproject.toml  transforms.py  validators.py
