[project]
name = "mosaic_workflows"
version = "0.1.0"
description = "Orchestrate protein design workflows with multiple steps and stages"
readme = "README.md"
authors = [
    { name = "Tudor-Stefan Cotet", email = "tudor@adaptyvbio.com"}
]
requires-python = "==3.12.*"
dependencies = [
    "dm-haiku>=0.0.13",
    "esm2quinox==0.1.0",
    "flax>=0.10.2",
    "gemmi>=0.6.5",
    "ipymolstar>=0.0.9",
    "jax>=0.6.2",
    # joltz is vendored under src/joltz, removed its dep here
    "boltz @ git+https://github.com/jwohlwend/boltz.git", # Might cause some joltz bugs, set to <2.0.3
    "einops>=0.8.0",
    "jaxtyping>=0.2.36",
    "marimo>=0.10.9",
    "matplotlib>=3.10.0",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "esmj",
    "scipy==1.13.1",
    "ablang>=0.3.1",
    "jablang",
    "torchvision>=v0.22.0",
    "equinox>=0.13.0",
    "torch>=2.7.1",
    "numpy==1.26.4",
    # protenix requires numpy>=2.1; install optionally if needed
    "httpx>=0.28.1",
]

[dependency-groups]
jax-cpu = [
  "jax[cpu]",
]
jax-cuda = [
  "jax[cuda]",
]
jax-tpu= [
  "jax[tpu]",
]

# Optional install groups for convenience
games = [
  "equinox>=0.13.0",
  "einops>=0.8.0",
  "jaxtyping>=0.2.36",
]
workflows = [
  "gemmi>=0.6.5",
  "ipymolstar>=0.0.9",
  "matplotlib>=3.10.0",
  "marimo>=0.13.15",
  "httpx>=0.28.1",
  "modal>=0.64.0",
]
all = [
  "equinox>=0.13.0",
  "einops>=0.8.0",
  "jaxtyping>=0.2.36",
  "gemmi>=0.6.5",
  "ipymolstar>=0.0.9",
  "matplotlib>=3.10.0",
  "marimo>=0.13.15",
  "httpx>=0.28.1",
  "modal>=0.64.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/mosaic/proteinmpnn/weights/*",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
jablang = { git = "https://github.com/escalante-bio/jablang" }
esmj = { git = "https://github.com/escalante-bio/esmj" }
protenix = { git = "https://github.com/escalante-bio/protenij" }

[tool.uv]
conflicts = [
    [
      { group = "jax-cpu" },
      { group = "jax-cuda" },
      { group = "jax-tpu" },
    ],
]
package = true
override-dependencies = ["scipy==1.15.1", "numpy==2.1"]


[tool.hatch.metadata]
allow-direct-references = true

